# prusti-dev

./: .rustfmt.toml  Cargo.toml  README.md  all-closure-tests.py  xxx-backup-sfs.rs  xxx-closure-bench-results.csv  xxx-closure-bench.py
benchmark-output/: log  (+1 more)
ide/: Cargo.toml
ide/src/: call_finder.rs  compiler_info.rs  encoding_info.rs  fake_error.rs  ide_verification_result.rs  lib.rs  query_signature.rs  vsc_span.rs
prusti/: Cargo.toml
prusti-tests/: Cargo.toml
prusti-tests/tests/: main.rs
prusti-tests/tests/harnesses/: cargotest.rs  compiletest.rs  mod.rs
prusti-tests/tests/parse/fail/: wrong_attribute.rs
prusti-tests/tests/parse/ui/: after_expiry.stdout  and.stdout  closures.rs  closures.stdout  closures_fail-1.rs  closures_fail-1.stderr  closures_fail-2.rs  closures_fail-2.stderr  composite.stdout  empty.stdout  exists.stdout  exists_fail.rs  exists_fail.stderr  expression.stdout  forall.stdout  forall_fail.rs  forall_fail.stderr  implies.rs  implies.stdout  predicates.stdout  reentrancy.rs  reentrancy.stdout  spec_entailment.stdout  traits.stdout  true.stdout
prusti-tests/tests/typecheck/fail/: move_to_pure.rs  specification_result_precondition.rs  specification_type_error.rs
prusti-tests/tests/verify/fail/arrays-slices/: array-mut-loop.rs  complex-array-rhs.rs  out-of-bounds.rs  wrong-value.rs
prusti-tests/tests/verify/fail/assert-false/: compute-sound.rs  error-position.rs  int-option-sound.rs  list-sound.rs  tree-sound.rs
prusti-tests/tests/verify_overflow/fail/: fail-uint-fn.rs  index-vec.rs  pure-fn-overflow-error.rs  pure_assignments.rs
(+358 files in other folders)
