[package]
name = "ide"
version = "0.3.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[dependencies]
prusti-interface = { path = "../prusti-interface" }
prusti-utils = { path = "../prusti-utils" }
prusti-rustc-interface = { path = "../prusti-rustc-interface" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.rust-analyzer]
rustc_private = true