[package]
name = "prusti-tests"
version = "0.2.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2021"

[dev-dependencies]
prusti-server = { path = "../prusti-server" }
prusti-launch = { path = "../prusti-launch", artifact = "bin" }
prusti = { path = "../prusti", artifact = "bin" }
ureq = "2.1"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.10"
ui_test = "0.27"
ctrlc = "3.4"
regex = "1.11"

[[test]]
name = "main"
harness = false
